--- a/list_with_card.htm
+++ b/list_with_card.htm
@@ -42,18 +42,15 @@
                         Latest Features</h3>
                 </div>
             </div>
-            <div class="row text-center" style="margin-bottom:10px">
+            <div class="row text-center" style="margin-bottom: 10px">
                 <div class="span3">
                     <div class="thumbnail">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
                             </p>
                         </div>
                     </div>
@@ -62,13 +59,10 @@
                     <div class="thumbnail">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
                             </p>
                         </div>
                     </div>
@@ -77,13 +71,10 @@
                     <div class="thumbnail">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
                             </p>
                         </div>
                     </div>
@@ -92,30 +83,24 @@
                     <div class="thumbnail">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row text-center" style="margin-bottom:10px">
+            <div class="row text-center" style="margin-bottom: 10px">
                 <div class="span3">
                     <div class="thumbnail">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
                             </p>
                         </div>
                     </div>
@@ -124,13 +109,22 @@
                     <div class="thumbnail">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="span3">
+                     <div class="thumbnail">
+                        <img src="http://placehold.it/800x500" alt="">
+                        <div class="caption">
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
                             </p>
                         </div>
                     </div>
@@ -139,45 +133,24 @@
                     <div class="thumbnail">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="span3">
-                    <div class="thumbnail">
-                        <img src="http://placehold.it/800x500" alt="">
-                        <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row text-center" style="margin-bottom:10px">
+            <div class="row text-center" style="margin-bottom: 10px">
                 <div class="span3">
                     <div class="thumbnail">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
                             </p>
                         </div>
                     </div>
@@ -186,13 +159,10 @@
                     <div class="thumbnail">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
                             </p>
                         </div>
                     </div>
@@ -201,13 +171,10 @@
                     <div class="thumbnail">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
                             </p>
                         </div>
                     </div>
@@ -216,13 +183,10 @@
                     <div class="thumbnail">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="caption">
-                            <h3>
-                                Feature Label</h3>
-                            <p>
-                                This would be a great spot to feature some brand new products!</p>
-                            <p>
-                                <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">
-                                    More Info</a>
+                            <h3> Feature Label</h3>
+                            <p> This would be a great spot to feature some brand new products!</p> <p>
+                                <a href="#" class="btn btn-primary">Buy Now!</a> 
+                                <a href="#" class="btn btn-default"> More Info</a>
                             </p>
                         </div>
                     </div>
