--- a/detail_with_find_top.htm
+++ b/detail_with_find_top.htm
@@ -84,7 +84,7 @@
                                 </select>
                             </div>
                             <div style="text-align: center;">
-                                <input type="button" class="btn" value="Login" />
+                                <input type="button" class="btn btn-primary" value="Login" />
                             </div>
                         </div>
                     </div>
