--- a/info_with_map.htm
+++ b/info_with_map.htm
@@ -53,8 +53,7 @@
                             marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed">
                         </iframe>
                     </div>
-                </div>
-                >
+                </div> 
                 <div class="row">
                     <div class="span8">
                         <h3>
@@ -106,10 +105,10 @@
                       <p><i class="fa fa-envelope-o"></i> <abbr title="Email">E</abbr>: <a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a></p>
                       <p><i class="fa fa-clock-o"></i> <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
                       <ul style="list-style:none; ">
-                        <li class="tooltip-social facebook-link" style="float:left; margin-right:10px; margin-left:-20px;"><a href="#facebook-page" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-                        <li class="tooltip-social linkedin-link" style="float:left;margin-right:10px;"><a href="#linkedin-company-page" data-toggle="tooltip" data-placement="top" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-                        <li class="tooltip-social twitter-link" style="float:left;margin-right:10px;"><a href="#twitter-profile" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-                        <li class="tooltip-social google-plus-link" style="float:left;margin-right:10px;"><a href="#google-plus-page" data-toggle="tooltip" data-placement="top" title="Google+"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
+                        <li  style="float:left; margin-right:10px; margin-left:-20px;"><a href="#" data-toggle="tooltip" data-placement="top" title="QQ"><i class="fa fa-qq fa-2x"></i></a></li>
+                        <li style="float:left;margin-right:10px;"><a href="#" data-toggle="tooltip" data-placement="top" title="Weibo"><i class="fa fa-weibo fa-2x"></i></a></li>
+                        <li  style="float:left;margin-right:10px;"><a href="#" data-toggle="tooltip" data-placement="top" title="RenRen"><i class="fa fa-renren fa-2x"></i></a></li>
+                        <li style="float:left;margin-right:10px;"><a href="#" data-toggle="tooltip" data-placement="top" title="WeiXin"><i class="fa fa-weixin fa-2x"></i></a></li>
                       </ul>
                     </div>
                 </div>
