--- a/news_by_date.htm
+++ b/news_by_date.htm
@@ -33,16 +33,39 @@
     
         <div class="container">
             <div class="row">
-                <div class="span3 bs-docs-sidebar">
-                    <ul class="nav nav-list bs-docs-sidenav">
-                        <li class="active"><a href="#typography"><i class="icon-chevron-right"></i>Typography</a></li>
-                        <li><a href="#"><i class="icon-chevron-right"></i>Code</a></li>
-                        <li><a href="#"><i class="icon-chevron-right"></i>Tables</a></li>
-                        <li><a href="#"><i class="icon-chevron-right"></i>Forms</a></li>
-                        <li><a href="#"><i class="icon-chevron-right"></i>Buttons</a></li>
-                        <li><a href="#"><i class="icon-chevron-right"></i>Images</a></li>
-                        <li><a href="#"><i class="icon-chevron-right"></i>Icons by Glyphicons</a></li>
-                    </ul>
+                <div class="span3" >
+                    <div class="list-group" style="margin-top:10px;">
+                          <a href="#" class="list-group-item active">
+                            Cras justo odio
+                          </a>
+                          <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+                          <a href="#" class="list-group-item">Morbi leo risus</a>
+                          <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+                          <a href="#" class="list-group-item">Vestibulum at eros</a>
+                     </div>
+                    <div class="list-group" style="margin-top:10px;">
+                          <a href="#" class="list-group-item ">
+                            Cras justo odio
+                          </a>
+                          <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+                          <a href="#" class="list-group-item">Morbi leo risus</a>
+                          <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+                          <a href="#" class="list-group-item">Vestibulum at eros</a>
+                     </div>
+                    <div class="list-group">
+                      <a href="#" class="list-group-item ">
+                        <h4 class="list-group-item-heading">List group </h4>
+                        <p class="list-group-item-text">Add nearly any HTML within, even for linked list groups like </p>
+                      </a>
+                       <a href="#" class="list-group-item active" >
+                        <h4 class="list-group-item-heading">List group </h4>
+                        <p class="list-group-item-text">Add nearly any HTML within, even for linked list groups like </p>
+                      </a>
+                      <a href="#" class="list-group-item">
+                        <h4 class="list-group-item-heading">List group </h4>
+                        <p class="list-group-item-text">Add nearly any HTML within, even for linked list groups like</p>
+                      </a>
+                    </div>
                 </div>
                 <div class="span9" style="margin-top: 10px;">
                     <div class="panel panel-default">
